--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,5 +1,4 @@
--- defaults sourced from https://github.com/jaor/xmobar/blob/master/src/Config.hs
-Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
+Config { font = "xft:Source Code Pro:bold:size=10, -misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
        , additionalFonts = []
        , bgColor = "#000000"
        , fgColor = "#BFBFBF"
@@ -17,10 +16,13 @@ Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
        , overrideRedirect = True
        , pickBroadest = False
        , iconRoot = "."
-       , commands = [ Run Date "%a %b %_d %Y * %H:%M:%S" "theDate" 10
+       , commands = [ Run Date "%a %b %_d %Y | %H:%M:%S" "theDate" 10
+                    , Run Cpu ["-L","3","-H","50",
+                               "--normal","green","--high","red"] 10
+                    , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run StdinReader
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ <fc=#00FF00>%uname%</fc> * <fc=#FF0000>%theDate%</fc>"
+       , template = "%StdinReader% }{ %cpu% | %memory% | %theDate%"
        }
