--- a/50-synaptics.conf
+++ b/50-synaptics.conf
@@ -9,8 +9,8 @@ Section "InputClass"
         Option "HorizScrollDelta" "-114"
         Option "VertTwoFingerScroll" "1"
         Option "HorizTwoFingerScroll" "1"
-        Option "SoftButtonAreas" "0 0 0 0 0 0 0 0"
-        Option "SecondarySoftButtonAreas" "0 0 0 0 0 0 0 0"
+        Option "SoftButtonAreas" "67% 0 0 0 33% 67% 0 0"
+        Option "HasSecondarySoftButtons" "0"
         MatchDevicePath "/dev/input/event*"
 EndSection
 
