use xswipe with less hacks

--- a/60-synaptics.conf
+++ b/60-synaptics.conf
@@ -5,8 +5,8 @@ Section "InputClass"
         Option "TapButton1" "1"
         Option "TapButton2" "3"
         Option "TapButton3" "2"
-        Option "VertScrollDelta" "-114"
-        Option "HorizScrollDelta" "-114"
+        #Option "VertScrollDelta" "-114"
+        #Option "HorizScrollDelta" "-114"
         Option "VertTwoFingerScroll" "1"
         Option "HorizTwoFingerScroll" "1"
         Option "SoftButtonAreas" "67% 0 80% 0 33% 67% 80% 0"
