--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,4 +1,4 @@
-Config { font = "xft:Source Code Pro:bold:size=10, -misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
+Config { font = "xft:Hack:bold:size=11, -misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
        , additionalFonts = []
        , bgColor = "#000000"
        , fgColor = "#BFBFBF"
@@ -6,7 +6,7 @@ Config { font = "xft:Source Code Pro:bold:size=10, -misc-fixed-*-*-*-*-10-*-*-*-
        , position = Top
        , border = NoBorder
        , borderColor = "#BFBFBF"
-       , borderWidth = 1
+       , borderWidth = 0
        , textOffset = -1
        , iconOffset = -1
        , hideOnStart = False
@@ -27,7 +27,7 @@ Config { font = "xft:Source Code Pro:bold:size=10, -misc-fixed-*-*-*-*-10-*-*-*-
                                   "-L","10","-H","40",
                                   "--normal","green","--high","red"] 10
                     , Run DynNetwork ["-t","<dev> <rx>Kb/s <tx>Kb/s",
-                                      "-L","512","-H","524288",
+                                      "-L","524288","-H","1572864",
                                       "--normal","green","--high","red"] 10
                     , Run Battery ["-t", "B <left>% <timeleft>"] 10
                     , Run StdinReader
