--- a/.xmobarrc
+++ b/.xmobarrc
@@ -14,7 +14,8 @@ Config { font = "xft:Hack:bold:size=11, -misc-fixed-*-*-*-*-11-*-*-*-*-*-*-*"
                     , Run DynNetwork ["-t","<dev> <rx>Kb/s <tx>Kb/s",
                                       "-L","524288","-H","1572864",
                                       "--normal","green","--high","red"] 10
-                    , Run Battery ["-t", "B <left>% <timeleft>"] 10
+                    , Run Battery ["-t", "B <leftvbar> <timeleft>",
+                                   "-l", "red"] 10
                     , Run StdinReader
                     ]
        , template = " %StdinReader%  }{  %dynnetwork%   %cpu%   %memory%   %swap%   %battery%   %date% "
