--- a/60-synaptics.conf
+++ b/60-synaptics.conf
@@ -5,11 +5,12 @@ Section "InputClass"
         Option "TapButton1" "1"
         Option "TapButton2" "3"
         Option "TapButton3" "2"
-        #Option "VertScrollDelta" "-114"
-        #Option "HorizScrollDelta" "-114"
+        Option "VertScrollDelta" "-114"
+        Option "HorizScrollDelta" "-114"
         Option "VertTwoFingerScroll" "1"
         Option "HorizTwoFingerScroll" "1"
-        Option "SoftButtonAreas" "67% 0 80% 0 33% 67% 80% 0"
+        #Option "SoftButtonAreas" "67% 0 80% 0 33% 67% 80% 0"
+        Option "SoftButtonAreas" "0 0 0 0 0 0 0 0"
         Option "SecondarySoftButtonAreas" "0 0 0 0 0 0 0 0"
         MatchDevicePath "/dev/input/event*"
 EndSection
