--- a/.stalonetrayrc
+++ b/.stalonetrayrc
@@ -1,5 +1,6 @@
 window_strut none
-transparent true
-#geometry 1x1-0+0
-#grow_gravity E
+#transparent true
+background "#222222"
+geometry 1x1-0+0
+grow_gravity E
 #icon_gravity NW
