--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,7 +1,7 @@
 Config { font = "xft:Hack:bold:size=11, -misc-fixed-*-*-*-*-11-*-*-*-*-*-*-*"
-       , fgColor = "#ffffff"
+       , fgColor = "white"
        , bgColor = "gray20"
-       , position = TopW L 95
+       , position = Top
        , commands = [ Run Date "%a %d %b %Y %H:%M:%S" "date" 10
                     , Run Cpu ["-t","C <total>%",
                                "-L","10","-H","50",
