--- a/etc/X11/xorg.conf.d/90-keyboard.conf
+++ b/etc/X11/xorg.conf.d/90-keyboard.conf
@@ -1,12 +1,20 @@
 Section "InputClass"
     Identifier "keyboard defaults"
     MatchIsKeyboard "on"
-    Option "XKbOptions" "caps:escape"
+    Option "XKbOptions" "ctrl:nocaps"
 EndSection
 
 Section "InputClass"
     Identifier "apple keyboard"
     MatchProduct "Matias"
     MatchIsKeyboard "on"
-    Option "XKbOptions" "caps:escape,altwin:swap_alt_win"
+    Option "XKbOptions" "ctrl:nocaps,altwin:swap_alt_win"
 EndSection
+
+Section "InputClass"
+    Identifier "Happy Hacking"
+    MatchProduct "HHKB"
+    MatchIsKeyboard "on"
+    Option "XKbOptions" ""
+EndSection
+
