natural trackpad scrolling

--- a/etc/X11/xorg.conf.d/30-touchpad.conf
+++ b/etc/X11/xorg.conf.d/30-touchpad.conf
@@ -8,4 +8,7 @@ Section "InputClass"
 
     # 1/2/3 finger clicks correspond to l/r/m, for which there seems to be no override
     Option "ClickMethod" "clickfinger"
+
+    # just for touchpads
+    Option "NaturalScrolling" "true"
 EndSection
