--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -196,6 +196,7 @@ bindsym $mod+r mode "resize"
 #
 # Volume:
 #
+    # see https://wiki.archlinux.org/index.php/Sway#Custom_keybindings
     bindsym XF86AudioRaiseVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') +5%
     bindsym XF86AudioLowerVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') -5%
     bindsym XF86AudioMute exec pactl set-sink-mute $(pacmd list-sinks |awk '/* index:/{print $3}') toggle
