--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -197,13 +197,11 @@ bindsym $mod+r mode "resize"
 # Volume:
 #
     # see https://wiki.archlinux.org/index.php/Sway#Custom_keybindings
+    # consider pulseaudio-ctl
     bindsym XF86AudioRaiseVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') +5%
     bindsym XF86AudioLowerVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') -5%
     bindsym XF86AudioMute exec pactl set-sink-mute $(pacmd list-sinks |awk '/* index:/{print $3}') toggle
-    #bindsym XF86AudioRaiseVolume exec pulseaudio-ctl up > /dev/null 2>&1
-    #bindsym XF86AudioLowerVolume exec pulseaudio-ctl down > /dev/null 2>&1
-    #bindsym XF86AudioMute exec pulseaudio-ctl mute > /dev/null 2>&1
-    #bindsym XF86AudioMicMute exec pulseaudio-ctl mute-input > /dev/null 2>&1
+    bindsym XF86AudioMicMute exec pactl set-source-mute $(pacmd list-sources |awk '/* index:/{print $3}') toggle
 
 #
 # Status Bar:
