--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -19,7 +19,7 @@ set $font_size 10
 # Your preferred terminal emulator
 set $term st
 # application launcher
-set $dmenu_args -b -fn $font_name-$font_size
+set $dmenu_args -fn $font_name-$font_size
 set $menu_cmd dmenu_run $dmenu_args
 #set $menu_app sway-dmenu-desktop --dmenu="dmenu -i $dmenu_args"
 set $menu_app j4-dmenu-desktop --dmenu="dmenu -i $dmenu_args"
