--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -34,7 +34,7 @@ font $font_name $font_size
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 # lenovo x1cg3 14" 2560x1440
-output eDP-1 scale 2
+#output eDP-1 scale 2
 
 ### Input configuration
 #
