tmux: moar scrollback

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -5,3 +5,6 @@ set-option -g set-titles-string "#{window_name} #{pane_title}"
 
 # don't need a status bar
 set-option -g status off
+
+# moar scollback
+set-option -g history-limit 10000
