--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,3 +8,6 @@ set-option -g status off
 
 # moar scollback
 set-option -g history-limit 10000
+
+# add the sway socket to the inherited environment variables
+set-option -ga update-environment ' SWAYSOCK'
