normalise fonts and colours

--- a/home/.config/networkmanager-dmenu/config.ini
+++ b/home/.config/networkmanager-dmenu/config.ini
@@ -3,7 +3,7 @@
 # # Note that dmenu_command can contain arguments as well like `rofi -width 30`
 # # Rofi and dmenu are set to case insensitive by default `-i`
 # l = number of lines to display, defaults to number of total network options
-fn = Hack-10:bold
+fn = Monospace-10:bold
 nb = gray20
 nf = white
 sb = gray30
