--- a/home/.xmobarrc
+++ b/home/.xmobarrc
@@ -1,4 +1,4 @@
-Config { font = "xft:Hack:bold:size=10, -misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
+Config { font = "xft:Monospace:bold:size=10, -misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
        , fgColor = "white"
        , bgColor = "gray20"
        , position = Top
