--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,13 +1,17 @@
 # write to xterm title via escape codes
-set-option -g set-titles on
+set -g set-titles on
 # pane_title captures the xterm escape sent by the shel
-set-option -g set-titles-string "#{window_name} #{pane_title}"
+set -g set-titles-string "#{window_name} #{pane_title} #{session_alerts}"
 
 # don't need a status bar
-set-option -g status off
+set -g status off
 
 # moar scollback
-set-option -g history-limit 10000
+set -g history-limit 10000
+
+# 256 colours; use screen as BSD doesn't understand tmux term
+set -g default-terminal "screen-256color"
+#set -g default-terminal tmux-256color
 
 # add the sway socket to the inherited environment variables
-set-option -ga update-environment ' SWAYSOCK'
+set -ga update-environment ' SWAYSOCK'
