--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -15,3 +15,15 @@ set -g default-terminal "screen-256color"
 
 # add the sway socket to the inherited environment variables
 set -ga update-environment ' SWAYSOCK'
+
+
+# use screen ctrl-A prefix
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# clear scrollback
+bind-key C-L clear-history
+
+# enter copy mode
+bind-key a copy-mode
