--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -17,7 +17,7 @@ set -g default-terminal "screen-256color"
 set -ga update-environment ' SWAYSOCK'
 
 
-# use screen ctrl-A prefix
+# use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
