case insensitive less searching, experimental jmake, back to screen term for tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,8 +9,8 @@ set -g status off
 # moar scollback
 set -g history-limit 10000
 
-# 256 colours; use screen as BSD doesn't understand tmux term
-set -g default-terminal "screen-256color"
+# BSD can't understand tmux-256color and chromeos can't understand screen-256color, so default to "screen"
+#set -g default-terminal "screen-256color"
 #set -g default-terminal tmux-256color
 
 # add the sway socket to the inherited environment variables
