tmux has host colouring

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -6,6 +6,21 @@ set -g set-titles-string "#{window_name} #{pane_title} #{session_alerts}"
 # don't need a status bar
 set -g status off
 
+# host coloured status bar and window modes
+%if #{==:#{host},emperor}
+    set -g status-style fg=black,bg=green
+    set-window-option -g mode-style fg=black,bg=green
+%elif #{==:#{host},gigantor}
+    set -g status-style fg=black,bg=blue
+    set-window-option -g mode-style fg=black,bg=blue
+%elif #{==:#{host},lord}
+    set -g status-style fg=black,bg=magenta
+    set-window-option -g mode-style fg=black,bg=magenta
+%else
+    set -g status-style fg=black,bg=yellow
+    set-window-option -g mode-style fg=black,bg=yellow
+%endif
+
 # moar scollback
 set -g history-limit 10000
 
