--- a/home/.config/libinput-gestures.conf
+++ b/home/.config/libinput-gestures.conf
@@ -1,7 +1,5 @@
-# see /etc/libinput-gestures.conf
+# browser natural swipe back
+gesture swipe right 3	xdotool key alt+Left
 
-# Browser go forward (works only for Xorg, and Xwayland clients)
-gesture swipe right 3	xdotool key alt+Right
-
-# Browser go back (works only for Xorg, and Xwayland clients)
-gesture swipe left 3	xdotool key alt+Left
+# browser natural swipe forward
+gesture swipe left 3	xdotool key alt+Right
