--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -10,7 +10,7 @@ set -g status off
 %if #{==:#{host},emperor}
     set -g status-style fg=black,bg=green
     set-window-option -g mode-style fg=black,bg=green
-%elif #{==:#{host},gigantor}
+%elif #{==:#{host},tinygod}
     set -g status-style fg=black,bg=blue
     set-window-option -g mode-style fg=black,bg=blue
 %elif #{==:#{host},lord}
