--- a/home/.xmobarrc
+++ b/home/.xmobarrc
@@ -31,5 +31,5 @@ Config { font = "xft:Monospace:bold:size=10, -misc-fixed-*-*-*-*-10-*-*-*-*-*-*-
                     ]
        -- left button on network, cpu, memory, swap, battery invokes networkmanager_dmenu
        -- left button on volume invokes pavucontrol, then updates ${XDG_RUNTIME_DIR}/xmobarPulseVolume on exit
-       , template = " %StdinReader% }{ <action=`networkmanager_dmenu >/dev/null 2>&1` button=1>%dynnetwork%   %cpu%   %memory%%swap%%battery%</action>   <action=`pavucontrol && xmobarPulseVolume.sh` button=1>%volume%</action>   %date% "
+       , template = " %StdinReader% }{ <action=`networkmanager_dmenu >/dev/null 2>&1` button=1>%dynnetwork%   %cpu%   %memory%%swap%%battery%</action>   <action=`pavucontrol && xmobarPulseVolume` button=1>%volume%</action>   %date% "
        }
