tmux: red root colours and vi copy mode

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -7,7 +7,10 @@ set -g set-titles-string "#{window_name} #{pane_title} #{session_alerts}"
 set -g status off
 
 # host coloured status bar and window modes
-%if #{==:#{host},emperor}
+%if #{==:#{USER},root}
+    set -g status-style fg=black,bg=red
+    set-window-option -g mode-style fg=black,bg=red
+%elif #{==:#{host},emperor}
     set -g status-style fg=black,bg=green
     set-window-option -g mode-style fg=black,bg=green
 %elif #{==:#{host},tinygod}
@@ -42,3 +45,8 @@ bind-key C-L clear-history
 
 # enter copy mode
 bind-key a copy-mode
+
+# vi copypasta mode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
