tmux: use default terminal, add window/session to title

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,7 @@
 # write to xterm title via escape codes
 set -g set-titles on
 # pane_title captures the xterm escape sent by the shel
-set -g set-titles-string "#{window_name} #{pane_title} #{session_alerts}"
+set -g set-titles-string "#{session_name}:#{window_index} #{window_name} #{pane_title} #{session_alerts}"
 
 # don't need a status bar
 set -g status off
@@ -27,13 +27,8 @@ set -g status off
 # moar scollback
 set -g history-limit 10000
 
-# BSD can't understand tmux-256color and chromeos can't understand screen-256color, so default to "screen"
-#set -g default-terminal "screen-256color"
-#set -g default-terminal tmux-256color
-
 # add the sway socket to the inherited environment variables
 set -ga update-environment ' SWAYSOCK'
-
 
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind C-b
