--- a/home/.xmobarrc
+++ b/home/.xmobarrc
@@ -27,10 +27,9 @@ Config { font = "xft:Monospace:bold:size=11, -misc-fixed-*-*-*-*-11-*-*-*-*-*-*-
                                   , "-i"   , ""
                                   ] 50
                     , Run PipeReader "${XDG_RUNTIME_DIR}/xmobarPulseVolume" "volume"
-                    , Run Com "displayTemps" [] "temps" 10
                     , Run StdinReader
                     ]
        -- left button on network, cpu, memory, swap, battery invokes networkmanager_dmenu
        -- left button on volume invokes pavucontrol, then updates ${XDG_RUNTIME_DIR}/xmobarPulseVolume on exit
-       , template = " %StdinReader% }{ <action=`networkmanager_dmenu >/dev/null 2>&1` button=1>%dynnetwork%%temps%   %cpu%   %memory%%swap%%battery%</action>   <action=`pavucontrol && xmobarPulseVolume` button=1>%volume%</action>   %date% "
+       , template = " %StdinReader% }{ <action=`networkmanager_dmenu >/dev/null 2>&1` button=1>%dynnetwork%   %cpu%   %memory%%swap%%battery%</action>   <action=`pavucontrol && xmobarPulseVolume` button=1>%volume%</action>   %date% "
        }
