--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -30,6 +30,9 @@ set -g history-limit 10000
 # add the sway socket to the inherited environment variables
 set -ga update-environment ' SWAYSOCK'
 
+# force 256 colour
+set -g default-terminal "tmux-256color"
+
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind C-b
 set -g prefix C-a
