--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -124,7 +124,7 @@ font:
   # screens and make reading text a little easier.
   # On X11 it is possible to change the DPI for each instance of alacritty by using
   # `WINIT_HIDPI_FACTOR=1.0 alacritty` to scale the font.
-  scale_with_dpi: false
+  scale_with_dpi: true
 
 # Display the time it takes to redraw each frame.
 render_timer: false
