tmux: handle linux virtual console gracefully

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -30,8 +30,11 @@ set -g history-limit 10000
 # add the sway socket to the inherited environment variables
 set -ga update-environment ' SWAYSOCK'
 
-# force 256 colour
-set -g default-terminal "tmux-256color"
+# force tmux-256colour TERM
+# default back to "screen" when we're running a linux console, which has some vi highlighting failures when running tmux-256color
+%if #{!=:#{TERM},linux}
+	set -g default-terminal "tmux-256color"
+%endif
 
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind C-b
