--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -27,8 +27,8 @@ set -g status off
 # moar scollback
 set -g history-limit 10000
 
-# add the sway socket to the inherited environment variables
-set -ga update-environment ' SWAYSOCK'
+# collect needful wayland environment variables
+set -ga update-environment ' SWAYSOCK WAYLAND_DISPLAY'
 
 # force tmux-256colour TERM
 # default back to "screen" when we're running a linux console, which has some vi highlighting failures when running tmux-256color
