swap win and alt on thinkpad

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -2,4 +2,12 @@ Section "InputClass"
     Identifier "keyboard defaults"
     MatchIsKeyboard "on"
     Option "XKbOptions" "ctrl:nocaps"
-EndSection
+EndSection 
+
+Section "InputClass"
+    Identifier "keyboard thinkad"
+    MatchIsKeyboard "on"
+    MatchProduct "AT Translated Set 2 keyboard"
+    Option "XKbOptions" "ctrl:nocaps,altwin:swap_alt_win"
+EndSection 
+
