comments for clarity

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,9 @@
 # write to xterm title via escape codes
 set -g set-titles on
 # pane_title captures the xterm escape sent by the shel
-set -g set-titles-string "#{session_name}:#{window_index} #{window_name} #{pane_title} #{session_alerts}"
+# alacritty barfs on something here, I think it's session_alerts, under tinywl/wdwm
+#set -g set-titles-string "#{session_name}:#{window_index} #{window_name} #{pane_title} #{session_alerts}"
+set -g set-titles-string "#{session_name}:#{window_index} #{window_name} #{pane_title}"
 
 # don't need a status bar
 set -g status off
