remove alt/win key swap

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -1,13 +1,7 @@
 Section "InputClass"
-    Identifier "keyboard defaults"
-    MatchIsKeyboard "on"
-    Option "XKbOptions" "ctrl:nocaps"
-EndSection 
-
-Section "InputClass"
-    Identifier "keyboard thinkad"
-    MatchIsKeyboard "on"
-    MatchProduct "AT Translated Set 2 keyboard"
-    Option "XKbOptions" "ctrl:nocaps,altwin:swap_alt_win"
+	Identifier "keyboard defaults"
+	MatchIsKeyboard "on"
+	# look in Xorg.n.log to find the name that may be used for MatchProduct
+	Option "XKbOptions" "ctrl:nocaps"
 EndSection 
 
