clean up prompt colouring and nonlinux aliases

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,22 +9,8 @@ set -g set-titles-string "#{session_name}:#{window_index} #{window_name} #{pane_
 set -g status off
 
 # host coloured status bar and window modes
-%if #{==:#{USER},root}
-    set -g status-style fg=black,bg=red
-    set-window-option -g mode-style fg=black,bg=red
-%elif #{==:#{host},emperor}
-    set -g status-style fg=black,bg=green
-    set-window-option -g mode-style fg=black,bg=green
-%elif #{==:#{host},tinygod}
-    set -g status-style fg=black,bg=blue
-    set-window-option -g mode-style fg=black,bg=blue
-%elif #{==:#{host},lord}
-    set -g status-style fg=black,bg=magenta
-    set-window-option -g mode-style fg=black,bg=magenta
-%else
-    set -g status-style fg=black,bg=yellow
-    set-window-option -g mode-style fg=black,bg=yellow
-%endif
+set -g status-style fg=black,bg=${PROMPT_COLOUR}
+set-window-option -g mode-style fg=black,bg=${PROMPT_COLOUR}
 
 # moar scollback
 set -g history-limit 10000
